--- a/package.json
+++ b/package.json
@@ -1,14 +1,29 @@
 {
   "name": "fitbit-settings",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A dead simple module to assist managing user settings within Fitbit watch faces and applications",
   "repository": {
     "type": "git",
     "url": "https://github.com/brh55/fitbit-settings.git"
   },
   "scripts": {
+    "build": "babel source --out-dir .",
+    "prepublish": "npm run build",
     "test": "jest --coverage && coveralls < coverage/lcov.info"
   },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "modules": false
+        }
+      ]
+    ]
+  },
+  "files": [
+    "./index.js"
+  ],
   "keywords": [
     "fitbit development",
     "fitbt watch faces",
@@ -25,6 +40,7 @@
   },
   "homepage": "https://github.com/brh55/fitbit-settings#readme",
   "devDependencies": {
+    "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.2",
     "babel-jest": "^27.0.1",
