--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
+    "@babel/plugin-transform-object-assign": "^7.12.13",
     "@babel/preset-env": "^7.14.2",
     "babel-jest": "^27.0.1",
     "coveralls": "^3.1.0",
