--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "type": "git",
     "url": "https://github.com/brh55/fitbit-settings.git"
   },
+  "exports": {
+    ".": "./dist"
+  },
   "scripts": {
-    "build": "babel source --out-dir .",
+    "build": "babel src --out-dir dist",
     "prepublish": "npm run build",
     "test": "jest --coverage && coveralls < coverage/lcov.info"
   },
